# stock_analysis

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1ce918cafc23_user_and_price_table_created.py  33814e6dca12_daily_price_table_created.py  5746511c2d91_message.py  5ccb1d906387_create_daily_prices_table.py  743379383587_message.py  864cb3c07f41_message.py  b1245d5d30cb_create_table.py  dec51cb2d30d_create_user_table.py
data/processed/: OCFT_analytic.csv  OCFT_clean.csv  analytical_data.csv
migrations/: env.py
migrations/versions/: f9c11a6c12e9_create_table.py
src/: __init__.py  main.py  pipeline.py
src/api/: app.py  schemas.py
src/api/dependencies/: db.py
src/api/routers/: __init__.py  price.py
src/api/schemas/: __init__.py  user.py
src/core/: __init__.py  exceptions.py  logging_config.py
src/db/: __init__.py  config.py  connection.py  engine.py  models.py  query.py  session.py
src/ingestions/: market_api.py
src/repositories/: __init__.py  price.py  user.py
src/services/: __init__.py  price_ingestion_service.py  price_query_service.py  range_detection.py
src/stock_analysis/: __init__.py  main.py
tests/: conftest.py
tests/api/: test_prices.py
tests/data/: test_data_cleaner.py  test_data_loader.py
tests/integration/: conftest.py  integration_test.py  test_pipeline_integration.py  test_price_ingestion.py  test_user_api.py
tests/test_features/: test_features.py
tests/unit/: test_data_cleaner.py  test_data_loader.py  test_features.py
(+80 files in other folders)
